Hospital Reg Done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="form-group">
-                      Need an account? <a href="javascript:void()">Sign up</a>
+                      Need an account? <a href="javascript:void()" (click)="signUpHospital()">Sign up</a>
                     </div>
                     
                     <br/>
@@ -126,4 +126,4 @@
     
   </div> 
 </div>
-<!----------------------------------------------------------------------------------->
+<ngx-spinner></ngx-spinner>
