--- a/src/app/components/donor-registration/donor-registration.component.html
+++ b/src/app/components/donor-registration/donor-registration.component.html
@@ -53,7 +53,7 @@
 
                 <!--City-->
                 <div class="form-group">
-                    <label for="city">City:</label>
+                    <label for="city" class="text-info">City:</label>
                     <select class="form-control" id="city" [(ngModel)]="donor.city">
                         <option value="">- Select -</option>
                         <option *ngFor="let aCity of cities" value="{{aCity}}">{{aCity}}</option>
