--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,18 +13,11 @@
   <!-- Navbar links -->
   <div class="navbar-collapse collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-     
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="">Purchase Requisitions</a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" routerLink="/new-pr"><img src="../assets/icons/add.png" width="30px"> Create New</a>
-          <a class="dropdown-item" routerLink="/approve-prs"><img src="../assets/icons/approved.png" width="30px"> Approve</a>
-        </div>
-      </li>
-
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><img src="../assets/icons/user.png" width="30px"> {{getLoggedOnUsername()}}</a>
         <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/donor-update"><img src="../assets/icons/edit-profile.png" width="30px"> Update Profile</a>
+          <a class="dropdown-item" routerLink="/approve-prs"><img src="../assets/icons/calender.png" width="30px"> Donations Calendar</a>
           <a class="dropdown-item" (click)="signOut()" href="javascript:void()"><img src="../assets/icons/logout.svg" width="30px"> Logout</a>
         </div>
       </li> 
