--- a/src/app/components/donor-registration/donor-registration.component.html
+++ b/src/app/components/donor-registration/donor-registration.component.html
@@ -40,14 +40,7 @@
                 <!--Blood Group-->
                 <div class="form-group">
                     <label for="bloodgroup" class="text-info"><br/>Blood Group:</label><br>
-                    <label class="badge badge-danger"><input type="radio" name="bloodgroup" id="bg1" value="O+" [(ngModel)]="donor.bloodGroup"> O Positive</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <label class="badge badge-danger"><input type="radio" name="bloodgroup" id="bg2" value="O-" [(ngModel)]="donor.bloodGroup"> O Negative</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <label class="badge badge-danger"><input type="radio" name="bloodgroup" id="bg3" value="A+" [(ngModel)]="donor.bloodGroup"> A Positive</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <label class="badge badge-danger"><input type="radio" name="bloodgroup" id="bg4" value="A-" [(ngModel)]="donor.bloodGroup"> A Negative</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <label class="badge badge-danger"><input type="radio" name="bloodgroup" id="bg5" value="B+" [(ngModel)]="donor.bloodGroup"> B Positive</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <label class="badge badge-danger"><input type="radio" name="bloodgroup" id="bg6" value="B-" [(ngModel)]="donor.bloodGroup"> B Negative</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <label class="badge badge-danger"><input type="radio" name="bloodgroup" id="bg7" value="AB+" [(ngModel)]="donor.bloodGroup"> AB Positive</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <label class="badge badge-danger"><input type="radio" name="bloodgroup" id="bg8" value="AB+" [(ngModel)]="donor.bloodGroup"> AB Negative</label>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <label *ngFor="let bg of bloodGroups" class="badge badge-danger" style="margin-right: 5px;"><input type="radio" name="bloodgroup" id="bg1" value="{{bg.id}}" [(ngModel)]="donor.bloodGroup"> {{bg.name}}</label>
                     <label><input type="radio" name="bloodgroup" id="bg9" value="NN" [(ngModel)]="donor.bloodGroup" > Not Known</label>
                 </div>
 
