--- a/src/app/components/hospital-donation-campaign/hospital-donation-campaign.component.html
+++ b/src/app/components/hospital-donation-campaign/hospital-donation-campaign.component.html
@@ -80,7 +80,7 @@
     
             <!--Status-->
             <div class="form-group">
-              <label for="status" class="text-info"><br/>Gender:</label>&nbsp;&nbsp;<label class="badge badge-warning">Required</label><br>
+              <label for="status" class="text-info"><br/>Status:</label>&nbsp;&nbsp;<label class="badge badge-warning">Required</label><br>
               <label><input type="radio" name="options" id="option1" value="Draft" [(ngModel)]="campaign.status"> Draft</label>
               &nbsp;&nbsp;&nbsp;&nbsp;
               <label><input type="radio" name="options" id="option2" value="Published" [(ngModel)]="campaign.status"> Published</label>
