--- a/src/app/components/donation-campaigns-calendar/donation-campaigns-calendar.component.html
+++ b/src/app/components/donation-campaigns-calendar/donation-campaigns-calendar.component.html
@@ -1,3 +1,46 @@
-<p>
-  donation-campaigns-calendar works!
-</p>
+<div class="card-header text-center text-success"><h3>{{title}}</h3></div>
+
+<div class="card-body">
+  <div id="login-row" class="row justify-content-center align-items-center border rounded-top">
+      <div id="login-column" class="col-md-12">
+        <div id="login-box">
+
+          <!--City-->
+          <div class="form-check form-check-inline">
+            <label for="city" class="text-info" style="margin-top: 30px;">City:</label>
+            &nbsp;&nbsp;&nbsp;
+            <select class="form-control" id="city" [(ngModel)]="city" style="margin-top: 30px;">
+                <option value="">- Select -</option>
+                <option *ngFor="let aCity of cities" value="{{aCity}}">{{aCity}}</option>
+            </select>
+            &nbsp;&nbsp;&nbsp;
+            <input type="submit" name="appointment" class="btn btn-info btn-sm" style="margin-top: 30px;" value="Search" (click)="findCampaigns()">
+          </div>
+          <br/><br/>
+
+          <!--Results-->
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col" *ngFor="let camp of campaigns">
+              <div class="card" style="width: 18rem;">
+                <img src="../../../assets/icons/calender.png" class="card-img-top" style="width: 10vw; align-self: center;">
+                <div class="card-body">
+                  <h5 class="card-title">{{camp.campaignName}}</h5>
+                  <p class="card-text">Capaign location is {{camp.location}}.</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">{{getFriendlyDate(camp.campaignDate)}}</li>
+                  <li class="list-group-item">{{camp.city}}</li>
+                  <li class="list-group-item">{{camp.status}}</li>
+                </ul>
+                <div class="card-body">
+                  <input type="submit" name="appointment" class="btn btn-info btn-sm" value="Make an Appointment" (click)="createAppointment(camp)">
+                </div>
+              </div>
+              <br>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
