Appointment almost done

--- a/src/app/modal-dialog/modal-dialog.component.html
+++ b/src/app/modal-dialog/modal-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h6 class="modal-title">{{infoTitle}}</h6>
+  <h6 class="modal-title"><strong>{{infoTitle}}</strong></h6>
   <button type="button" class="close" aria-label="Close"(click)="activeModal.dismiss('Cross click')">X</button>
 </div>
 <div class="modal-body" innerHtml={{infoMessage}} style="font-size: small;"></div>
