--- a/src/app/components/create-appointment/create-appointment.component.html
+++ b/src/app/components/create-appointment/create-appointment.component.html
@@ -14,7 +14,7 @@
     <div class="form-check form-check-inline" *ngFor="let timeslot of timeSlots">
       <div class="card">
         <div class="card-body">
-          <input class="form-check-input" type="radio" name="timeSlot" id="timeSlot{{timeslot.slotNumber}}" value="{{timeslot.slotNumber}}">
+          <input class="form-check-input" type="radio" name="timeSlot" id="timeSlot{{timeslot.slotNumber}}" value="{{timeslot.slotNumber}}" [ngModel]="appointment.timeSlot">
           <label class="form-check-label" for="timeSlot{{timeslot.slotNumber}}">{{timeslot.text}}</label>
         </div>
       </div>
@@ -24,7 +24,7 @@
   <!--Remarks-->
   <div class="form-group">
     <label for="contactNo2" class="text-info"><br/>Remarks:</label><br>
-    <input [(ngModel)]="campaign.remarks" type="text" name="remarks" id="remarks" class="form-control">
+    <input [(ngModel)]="appointment.remarks" type="text" name="remarks" id="remarks" class="form-control">
   </div>
 
   <div class="form-group">
