--- a/src/app/components/create-appointment/create-appointment.component.html
+++ b/src/app/components/create-appointment/create-appointment.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h6 class="modal-title"><strong>New Appointment</strong></h6>
+  <h6 class="modal-title"><strong>Create New Appointment</strong></h6>
   <button type="button" class="close" aria-label="Close"(click)="activeModal.dismiss('Cross click')">X</button>
 </div>
 <div class="modal-body">
